[gd_scene load_steps=2 format=3 uid="uid://ck7hxh6s4dxr5"]

[ext_resource type="Script" path="res://objects/interactable/fridge/code_lock.gd" id="1_code"]

[node name="CodeLock" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_code")

[node name="Dim" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.65)

[node name="Center" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelRoot" type="Control" parent="Center"]
custom_minimum_size = Vector2(640, 760)
layout_mode = 2

[node name="PanelBase" type="ColorRect" parent="Center/PanelRoot"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.08, 0.07, 0.06, 0.96)

[node name="PanelTexture" type="TextureRect" parent="Center/PanelRoot"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
expand_mode = 1
stretch_mode = 5

[node name="ContentMargin" type="MarginContainer" parent="Center/PanelRoot"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 56
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBox" type="VBoxContainer" parent="Center/PanelRoot/ContentMargin"]
layout_mode = 2
alignment = 1

[node name="Title" type="Label" parent="Center/PanelRoot/ContentMargin/VBox"]
layout_mode = 2
text = "Кодовый замок"
horizontal_alignment = 1

[node name="DisplayPanel" type="Control" parent="Center/PanelRoot/ContentMargin/VBox"]
custom_minimum_size = Vector2(0, 90)
layout_mode = 2
size_flags_horizontal = 3

[node name="DisplayBase" type="ColorRect" parent="Center/PanelRoot/ContentMargin/VBox/DisplayPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.12, 0.1, 0.08, 0.95)

[node name="DisplayTexture" type="TextureRect" parent="Center/PanelRoot/ContentMargin/VBox/DisplayPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
expand_mode = 1
stretch_mode = 5

[node name="Display" type="Label" parent="Center/PanelRoot/ContentMargin/VBox/DisplayPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="Info" type="Label" parent="Center/PanelRoot/ContentMargin/VBox"]
layout_mode = 2
horizontal_alignment = 1

[node name="KeypadPanel" type="Control" parent="Center/PanelRoot/ContentMargin/VBox"]
custom_minimum_size = Vector2(320, 360)
layout_mode = 2

[node name="KeypadBase" type="ColorRect" parent="Center/PanelRoot/ContentMargin/VBox/KeypadPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.1, 0.09, 0.08, 0.65)

[node name="KeypadTexture" type="TextureRect" parent="Center/PanelRoot/ContentMargin/VBox/KeypadPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
expand_mode = 1
stretch_mode = 5

[node name="Grid" type="GridContainer" parent="Center/PanelRoot/ContentMargin/VBox/KeypadPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -139.0
offset_top = -186.0
offset_right = 139.0
offset_bottom = 186.0
grow_horizontal = 2
grow_vertical = 2
columns = 3

[node name="Btn1" type="Button" parent="Center/PanelRoot/ContentMargin/VBox/KeypadPanel/Grid"]
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
text = "1"
flat = true

[node name="Btn2" type="Button" parent="Center/PanelRoot/ContentMargin/VBox/KeypadPanel/Grid"]
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
text = "2"
flat = true

[node name="Btn3" type="Button" parent="Center/PanelRoot/ContentMargin/VBox/KeypadPanel/Grid"]
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
text = "3"
flat = true

[node name="Btn4" type="Button" parent="Center/PanelRoot/ContentMargin/VBox/KeypadPanel/Grid"]
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
text = "4"
flat = true

[node name="Btn5" type="Button" parent="Center/PanelRoot/ContentMargin/VBox/KeypadPanel/Grid"]
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
text = "5"
flat = true

[node name="Btn6" type="Button" parent="Center/PanelRoot/ContentMargin/VBox/KeypadPanel/Grid"]
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
text = "6"
flat = true

[node name="Btn7" type="Button" parent="Center/PanelRoot/ContentMargin/VBox/KeypadPanel/Grid"]
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
text = "7"
flat = true

[node name="Btn8" type="Button" parent="Center/PanelRoot/ContentMargin/VBox/KeypadPanel/Grid"]
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
text = "8"
flat = true

[node name="Btn9" type="Button" parent="Center/PanelRoot/ContentMargin/VBox/KeypadPanel/Grid"]
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
text = "9"
flat = true

[node name="Btn0" type="Button" parent="Center/PanelRoot/ContentMargin/VBox/KeypadPanel/Grid"]
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
text = "0"
flat = true

[node name="ActionPanel" type="Control" parent="Center/PanelRoot/ContentMargin/VBox"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
size_flags_horizontal = 3

[node name="ActionBase" type="ColorRect" parent="Center/PanelRoot/ContentMargin/VBox/ActionPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.08, 0.07, 0.06, 0.75)

[node name="ActionTexture" type="TextureRect" parent="Center/PanelRoot/ContentMargin/VBox/ActionPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
expand_mode = 1
stretch_mode = 5

[node name="Buttons" type="HBoxContainer" parent="Center/PanelRoot/ContentMargin/VBox/ActionPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="OkButton" type="Button" parent="Center/PanelRoot/ContentMargin/VBox/ActionPanel/Buttons"]
custom_minimum_size = Vector2(0, 56)
layout_mode = 2
size_flags_horizontal = 3
text = "ОК"
flat = true

[node name="ClearButton" type="Button" parent="Center/PanelRoot/ContentMargin/VBox/ActionPanel/Buttons"]
custom_minimum_size = Vector2(0, 56)
layout_mode = 2
size_flags_horizontal = 3
text = "Очистить"
flat = true

[node name="CancelButton" type="Button" parent="Center/PanelRoot/ContentMargin/VBox/ActionPanel/Buttons"]
custom_minimum_size = Vector2(0, 56)
layout_mode = 2
size_flags_horizontal = 3
text = "Отмена"
flat = true

[node name="PanelFrame" type="TextureRect" parent="Center/PanelRoot"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
expand_mode = 1
stretch_mode = 5

[node name="LockIcon" type="TextureRect" parent="Center/PanelRoot"]
layout_mode = 0
anchor_left = 0.5
anchor_right = 0.5
offset_left = -64.0
offset_top = -24.0
offset_right = 64.0
offset_bottom = 104.0
mouse_filter = 2
expand_mode = 1
stretch_mode = 5
